@@ -1,3 +1,7 @@
+2024-11-22 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Pass properly structured data to DatamapPostprocessEvent, resolves #355
+
 2024-11-04 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Use Core method for formatting TCE log messages, resolves #353, references #352
